--- a/ace/environments/ci/kustomization.yaml
+++ b/ace/environments/ci/kustomization.yaml
@@ -1,9 +1,9 @@
 resources:
-- buildconfig/sh-tools.yaml
+# - buildconfig/sh-tools.yaml
 # - configmaps/gitops-repo-configmap.yaml
 # - eventlisteners/ace-bar-event-listener.yaml
 # - eventlisteners/ace-integration-server.yaml
-- imagestreams/sh-tools.yaml
+# - imagestreams/sh-tools.yaml
 # - issuers/prod-ref-ss.yaml
 # - issuers/prod-ref-ss-ca.yaml
 # - pipelines/ace-bar-pipeline.yaml
@@ -41,13 +41,13 @@ resources:
 # - tasks/ace-tasks.yaml
 # - tasks/build-bar.yaml
 # - tasks/build-is.yaml
-- tasks/create-config.yaml
+# - tasks/create-config.yaml
 # - tasks/custom-buildah.yaml
 # - tasks/functional-test-task.yaml
-- tasks/github-open-pr.yaml
+# - tasks/github-open-pr.yaml
 # - tasks/gitops-ace.yaml
 # - tasks/ibm-gitops-for-ace-task.yaml
 # - tasks/ibm-jmeter-performance-test.yaml
-- tasks/resolve-props.yaml
+# - tasks/resolve-props.yaml
 # - triggerbindings/ace-integration-server.yaml
 # - triggertemplates/ace-integration-server.yaml
