--- a/ace/environments/ci/pvc/ace-config-pvc.yaml
+++ b/ace/environments/ci/pvc/ace-config-pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: ace-config-pvc
 spec:
-  storageClassName: ibmc-file-gold-gid
+  storageClassName: ocs-external-storagecluster-cephfs
   accessModes:
   - ReadWriteMany
   resources:
